Bug fix double border on firefox

--- a/public/stylesheets/medic/medicStyles.less
+++ b/public/stylesheets/medic/medicStyles.less
@@ -405,7 +405,6 @@ body{
       left: -1px;
       width: 0;
       height: 100%;
-      border-left: 1px solid black;
     }
   }
 }
